@@ -519,7 +519,7 @@ class Comments extends TikiLib {
 			?,?,?,?,?,?,?,?,?,?,
 			?,?,?,?,?,?,?,?,?,?,
 			?,?,?,?,?,?,?,?,?,?,
-			?,?,?,?,?,?,?,?)";
+			?,?,?,?,?,?,?,?,?)";
 			$bindvars=array($name,$description,$now,$now,0,
                         0,$controlFlood,$floodInterval,$moderator,0,$mail,$useMail,$usePruneUnreplied,
                         $pruneUnrepliedAge,  $usePruneOld,
